--- a/letschat/web/index.html
+++ b/letschat/web/index.html
@@ -54,5 +54,28 @@
       });
     });
   </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.2/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.2/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBFETPh8V4pQpG58RcKUDVPz1Ik7amyHh0",
+      authDomain: "chatapp-40992.firebaseapp.com",
+      projectId: "chatapp-40992",
+      storageBucket: "chatapp-40992.appspot.com",
+      messagingSenderId: "35939893154",
+      appId: "1:35939893154:web:ed216482e9e4cb8d59bcfb",
+      measurementId: "G-QWJWFH11XR"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 </html>
